@@ -46,6 +46,7 @@ class _Campaign {
 		const std::vector<_CampaignInfo> &GetCampaigns() { return Campaigns; }
 		const _CampaignInfo &GetCampaign(int Index) { return Campaigns[Index]; }
 
+		int GetCompletedLevels(int CampaignIndex);
 		bool GetNextLevel(uint32_t &Campaign, uint32_t &Level, bool Update=false);
 		const std::string &GetLevel(int Campaign, int Level) { return Campaigns[Campaign].Levels[Level].File; }
 		const std::string &GetLevelNiceName(int Campaign, int Level) { return Campaigns[Campaign].Levels[Level].NiceName; }
